[gd_scene load_steps=2 format=3 uid="uid://ccamera001"]

[ext_resource type="Script" path="res://interactables/SecurityCamera.gd" id="1_camera"]

[node name="SecurityCamera" type="Node2D"]
script = ExtResource("1_camera")

[node name="Visual" type="Node2D" parent="."]

[node name="Mount" type="ColorRect" parent="Visual"]
offset_left = -8.0
offset_top = -8.0
offset_right = 8.0
offset_bottom = 8.0
color = Color(0.3, 0.3, 0.35, 1)

[node name="Body" type="ColorRect" parent="Visual"]
offset_left = 0.0
offset_top = -6.0
offset_right = 20.0
offset_bottom = 6.0
color = Color(0.2, 0.2, 0.25, 1)

[node name="Lens" type="ColorRect" parent="Visual"]
offset_left = 16.0
offset_top = -4.0
offset_right = 24.0
offset_bottom = 4.0
color = Color(0.1, 0.1, 0.15, 1)

[node name="AlertLight" type="ColorRect" parent="Visual"]
offset_left = -4.0
offset_top = -12.0
offset_right = 4.0
offset_bottom = -8.0
color = Color(0, 1, 0, 1)

[node name="DetectionCone" type="Polygon2D" parent="."]
color = Color(0.2, 0.8, 0.2, 0.15)
